# cgal-exercises

2d-delaunay/: tp-delaunay.odt
2d-delaunay/src/: CMakeLists.txt  delaunay.ui  dt.h  glviewer.cpp  glviewer.h  main.cpp  scene.h  window.cpp  window.h
3d-polyhedral-surfaces/: CMakeLists.txt  euler.cpp  tp-polyhedral-surfaces.odt  traversal.cpp
3d-polyhedral-surfaces/data/: al.off  holes.off
3d-polyhedral-surfaces/src/: CMakeLists.txt  copier.h  main.cpp  polyhedron.h  polyhedron.ui  scene.cpp  scene.h  types.h  window.cpp  window.h
